@@ -24,6 +24,8 @@
 
 package jenkins.scm;
 
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.model.Job;
 import hudson.model.Result;
 import hudson.model.Run;
@@ -31,18 +33,14 @@ import hudson.model.User;
 import hudson.scm.ChangeLogSet;
 import hudson.scm.SCM;
 import hudson.util.AdaptedIterator;
-import org.kohsuke.stapler.export.Exported;
-
-import edu.umd.cs.findbugs.annotations.CheckForNull;
-import edu.umd.cs.findbugs.annotations.NonNull;
 import java.util.AbstractSet;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import org.kohsuke.stapler.export.Exported;
 
 /**
  * Allows a {@link Run} to provide {@link SCM}-related methods, such as providing changesets and culprits.
@@ -50,7 +48,7 @@ import java.util.logging.Logger;
  * @since 2.60
  */
 public interface RunWithSCM<JobT extends Job<JobT, RunT>,
-        RunT extends Run<JobT, RunT> & RunWithSCM<JobT,RunT>> {
+        RunT extends Run<JobT, RunT> & RunWithSCM<JobT, RunT>> {
 
     /**
      * Gets all {@link ChangeLogSet}s currently associated with this item.
@@ -95,12 +93,12 @@ public interface RunWithSCM<JobT extends Job<JobT, RunT>,
             return calculateCulprits();
         }
 
-        return new AbstractSet<User>() {
-            private Set<String> culpritIds = Collections.unmodifiableSet(new HashSet<>(getCulpritIds()));
+        return new AbstractSet<>() {
+            private Set<String> culpritIds = Set.copyOf(getCulpritIds());
 
             @Override
             public Iterator<User> iterator() {
-                return new AdaptedIterator<String,User>(culpritIds.iterator()) {
+                return new AdaptedIterator<>(culpritIds.iterator()) {
                     @Override
                     protected User adapt(String id) {
                         // TODO: Probably it should not auto-create users
@@ -126,7 +124,7 @@ public interface RunWithSCM<JobT extends Job<JobT, RunT>,
     @NonNull
     default Set<User> calculateCulprits() {
         Set<User> r = new HashSet<>();
-        RunT p = ((RunT)this).getPreviousCompletedBuild();
+        RunT p = ((RunT) this).getPreviousCompletedBuild();
         if (p != null) {
             Result pr = p.getResult();
             if (pr != null && pr.isWorseThan(Result.SUCCESS)) {
