@@ -1,27 +1,26 @@
 package jenkins.security;
 
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.Extension;
 import hudson.model.Descriptor.FormException;
 import hudson.model.User;
 import hudson.model.UserProperty;
 import hudson.model.UserPropertyDescriptor;
 import hudson.security.SecurityRealm;
-import jenkins.model.Jenkins;
-import net.sf.json.JSONObject;
-import org.jenkinsci.Symbol;
-import org.kohsuke.stapler.StaplerRequest;
-
-import edu.umd.cs.findbugs.annotations.NonNull;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import jenkins.model.Jenkins;
+import net.sf.json.JSONObject;
+import org.jenkinsci.Symbol;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
+import org.kohsuke.stapler.StaplerRequest;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -45,8 +44,8 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
      */
     @Override
     public UserProperty reconfigure(StaplerRequest req, JSONObject form) throws FormException {
-    	req.bindJSON(this, form);
-    	return this;
+        req.bindJSON(this, form);
+        return this;
     }
 
     /**
@@ -55,8 +54,8 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
     public Collection<? extends GrantedAuthority> getAuthorities2() {
         String[] roles = this.roles;    // capture to a variable for immutability
 
-        if(roles == null){
-            return Collections.singleton(SecurityRealm.AUTHENTICATED_AUTHORITY2);
+        if (roles == null) {
+            return Set.of(SecurityRealm.AUTHENTICATED_AUTHORITY2);
         }
 
         String authenticatedRole = SecurityRealm.AUTHENTICATED_AUTHORITY2.getAuthority();
@@ -91,7 +90,7 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
             roles.add(ga.getAuthority());
         }
         String[] a = roles.toArray(new String[0]);
-        if (!Arrays.equals(this.roles,a)) {
+        if (!Arrays.equals(this.roles, a)) {
             this.roles = a;
             this.timestamp = System.currentTimeMillis();
             user.save();
@@ -102,7 +101,7 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
      * Removes the recorded information
      */
     public void invalidate() throws IOException {
-        if (roles!=null) {
+        if (roles != null) {
             roles = null;
             timestamp = System.currentTimeMillis();
             user.save();
@@ -121,13 +120,13 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
                 // but as this is a callback of a successful login we can safely create the user.
                 User u = User.getById(username, true);
                 LastGrantedAuthoritiesProperty o = u.getProperty(LastGrantedAuthoritiesProperty.class);
-                if (o==null)
-                    u.addProperty(o=new LastGrantedAuthoritiesProperty());
+                if (o == null)
+                    u.addProperty(o = new LastGrantedAuthoritiesProperty());
                 Authentication a = Jenkins.getAuthentication2();
-                if (a!=null && a.getName().equals(username))
+                if (a != null && a.getName().equals(username))
                     o.update(a);    // just for defensive sanity checking
             } catch (IOException e) {
-                LOGGER.log(Level.WARNING, "Failed to record granted authorities",e);
+                LOGGER.log(Level.WARNING, "Failed to record granted authorities", e);
             }
         }
 
@@ -167,7 +166,7 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
         public boolean isEnabled() {
             return false;
         }
-        
+
         @Override
         public UserProperty newInstance(User user) {
             return null;
